# flask-postgres-gunicorn-nginx

./: docker-compose.prod.yml  docker-compose.yml
services/web/: Dockerfile  Dockerfile.prod  manage.py  pyproject.toml  requirements.txt
services/web/project/: __init__.py  config.py
services/web/project/static/: hello.txt
