[tool.poetry]
name = "flask-postgres-gunicorn-nginx"
version = "0.1.0"
description = ""
authors = ["Sergey Gurkov"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "1.1.2"
Jinja2 = "3.0.3"
itsdangerous = "2.0.1"
Werkzeug = "2.0.3"
Flask-SQLAlchemy = "2.5.1"
psycopg2 = "2.8.6"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]

[tool.distutils.bdist_wheel]
universal = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
